--- a/app.json
+++ b/app.json
@@ -18,7 +18,13 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.tiesada.fc",
-      "buildNumber": "1"
+      "buildNumber": "1",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Necessitem accedir a la càmera per actualitzar la foto de perfil.",
+        "NSPhotoLibraryUsageDescription": "Necessitem accedir a la galeria per seleccionar la foto de perfil.",
+        "NSPhotoLibraryAddUsageDescription": "Necessitem guardar imatges a la teva galeria.",
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "package": "com.tiesada.fc",
