--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "tiesada-fc",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/escudo.png",
     "scheme": "tiesadafc",
     "userInterfaceStyle": "automatic",
     "description": "App oficial del TiesadaFC - Gestión de partidos, alineaciones y apuestas",
@@ -31,9 +31,7 @@
       "versionCode": 1,
       "adaptiveIcon": {
         "backgroundColor": "#1E3A8A",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "foregroundImage": "./assets/images/escudo.png"
       },
       "permissions": [
         "CAMERA",
@@ -52,12 +50,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/escudo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#1E3A8A",
           "dark": {
-            "image": "./assets/images/splash-icon.png",
+            "image": "./assets/images/escudo.png",
             "backgroundColor": "#000000"
           }
         }
