Enable push notifications configuration
- Added expo-notifications plugin to app.json with custom icon and colors
- Integrated automatic push notification registration in PlayerSelectionScreen
- Users will now receive push notifications for matches, bets, and updates
- Notifications configured with TiesadaFC branding

--- a/app.json
+++ b/app.json
@@ -70,7 +70,15 @@
           }
         }
       ],
-      "expo-font"
+      "expo-font",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/escudo.png",
+          "color": "#1E3A8A",
+          "sounds": []
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
