Fix iOS build issues and update app icon - Improve iOS configuration (ATS, EAS build) - Fix infinite re-render bug in player stats editing - Update app icon (escudo.png) - Improve Supabase configuration for iOS compatibility

--- a/app.json
+++ b/app.json
@@ -70,15 +70,7 @@
           }
         }
       ],
-      "expo-font",
-      [
-        "expo-notifications",
-        {
-          "icon": "./assets/images/escudo.png",
-          "color": "#1E3A8A",
-          "sounds": []
-        }
-      ]
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
